--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,16 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  run-tests:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        python-version:
-          - "3.8.20"
-
   integration:
-    name: Continuous Integration
+    name: Continuous Integration (Unit Tests)
     runs-on: ubuntu-latest
 
     steps:
@@ -29,18 +21,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.8.20"
 
-      - name: Run unit tests
-        run: echo "Running unit tests"
-      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install .
           pip install pytest
 
-      - name: Run tests
+      - name: Run unit tests
         run: pytest
 
   build-and-push-ecr-image:
@@ -78,7 +67,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-  Continuous-Deployment:
+  continuous-deployment:
     name: Continuous Deployment
     needs: build-and-push-ecr-image
     runs-on: self-hosted
